--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,11 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
+  <!-- Include the Material Ui theme -->
+  <link rel="stylesheet" href="@sweetalert2/theme-material-ui/material-ui.css">
+
+  <script src="sweetalert2/dist/sweetalert2.min.js"></script>
+
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
